logging/kibana-3-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-kibana
      port: 443
      protocol: TLS
      hostname: kibana.example.com
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: example-kibana
  namespace: logging
spec:
  hostnames:
  - kibana.example.com
  parentRefs:
  - name: example-gateway
    namespace: kube-system
    sectionName: https-kibana
  rules:
  - backendRefs:
    - name: quickstart-kb-http
      namespace: logging
      port: 5601
